<?xml version="1.0"?>
<package>
  <name>pandora_slam_3d</name>
  <version>0.0.0</version>
  <description>The pandora_slam_3d package</description>

  <maintainer email="apostoee@gmail.com">Evangelos Apostolidis</maintainer>


  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>octomap_server</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roslint</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>octomap_server</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>

  </export>
</package>
